- 
    Bug 
- 
    Resolution: Fixed
- 
     Not Evaluated Not Evaluated
- 
    Qt Creator 14.0.0-beta1, Qt Creator 14.0.0
- 
    None
- 
        
- 
        03e35aac1 (14.0), e6299f510 (14.0), 4f1cc1ff3 (14.0)
Classic switch buffer dialog (by Ctrl+Tab) don't able to use up and down keys to navigate in buffers list.
| For Gerrit Dashboard: QTCREATORBUG-31072 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 570206,2 | Core: Fix selecting recent document with arrow keys | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 | 
| 570597,2 | Core: allow selecting recent documents with Ctrl+N/P | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 | 
| 570875,2 | Core: fix direction of Ctrl+N/P/Up/Down | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |