Core: Fix selecting recent document with arrow keys

The editor actions are defined in the editor since the removal of the
TextEditorActionHandler. So we potentially capture the ctrl+up/down in
the editor. Fix this by overwriting the shortcuts in the event handler
of the open editor widget.

Fixes: QTCREATORBUG-31072
Change-Id: I45217962bcb2ef3ae8ebed7c4a6d0412bcc0216b
Reviewed-by: Eike Ziller <eike.ziller@qt.io>